<resources>
    <string name="app_name">Mysterious Questions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="welcome">Welcome</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="remember_me">Remember Me</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_now">Create Now!</string>
    <string name="number_of_skipped_question">Number of Skipped question</string>
    <string name="number_of_correct_answers">Number of Correct answers</string>
    <string name="_0">0</string>
    <string name="number_of_wrong_answers">Number of Wrong answers</string>
    <string name="new_user_name">New User Name</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pass">Confirm Pass</string>
    <string name="selected_date">Selected Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="sounds">Sounds</string>
    <string name="notifications">Notifications</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="player_progress">Player Progress</string>
    <string name="level">Level</string>
    <string name="question_title">Question Title</string>
    <string name="write_your_answer_here">Write Your Answer here</string>
    <string name="confirm">Confirm</string>
    <string name="skip">Skip</string>
    <string name="radiobutton">RadioButton</string>
    <string name="question_title2">َQuestion Title</string>
    <string name="logout">Logout</string>
    <string name="your_profile_data_changed_successfully">Your Profile data changed successfully!</string>
    <string name="please_login_again_to_update">Please login again to Update!</string>
    <string name="dont_leave_it_empty">Don\'t Leave it Empty!</string>
    <string name="enter_valid_email">Enter Valid Email!</string>
    <string name="user_name_should_be_above_3_characters">User Name Should be above 3 characters</string>
    <string name="passwordShouldBeAtLeast8Characters">Password Should be at least 8 Characters!</string>
    <string name="password_didnt_match">Password Didn\'t Match!</string>
    <string name="logged_out_successfully">Logged Out Successfully!</string>
    <string name="please_login_again_to_save_your_progress">Please login again to save your progress!</string>
    <string name="logged_in_successfully">Logged In Successfully</string>
    <string name="incorrect_email_or_password">Incorrect Email Or Password</string>
    <string name="please_sign_in">Please SignIn!</string>
    <string name="checked">Checked!</string>
    <string name="unChecked">Unchecked!</string>
    <string name="no_gameplay_history">No gameplay history!</string>
    <string name="please_login_first">Please login again first!</string>
    <string name="please_login_again_to_reset">Please login again to Reset!</string>
    <string name="game_progress_reset">Game Progress Reset!</string>
    <string name="music_is_on">Music is On!</string>
    <string name="music_is_off">Music turned off!</string>
    <string name="there_is_some_question_need_answers">There is some Question need answers 👀</string>
    <string name="notification_comeback_push">We haven\'t seen you in a DAY! , Comeback and solve more Question ✨</string>
    <string name="you_dont_have_enough_points">You don\'t have enough points 🙁</string>
    <string name="level_finished">LEVEL FINISHED!</string>
    <string name="good_job">Good Job! 😍</string>
    <string name="right_answer_dialog_tag">Right Answer Dialog</string>
    <string name="wrong_answer">Wrong Answer 🙁</string>
    <string name="wrong_answer_dialog_tag">Wrong Answer Dialog</string>
    <string name="time_is_up">Time is Up!</string>
    <string name="time_is_up_tag">Time Up Dialog</string>
    <string name="question_skipped">Question Skipped!</string>
    <string name="please_collect_required_points">Please collect the required points</string>
    <string name="notification_is_on">Notification is on!</string>
    <string name="notification_turned_off">Notification turned off!</string>
    <string name="please_sign_in_first">Please Sign in first!</string>
</resources>