<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/img_base"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_score_background"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_level"
        app:layout_constraintEnd_toEndOf="@+id/tv_levelTxt"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_levelTxt"
        app:layout_constraintVertical_bias="0.378"
        app:srcCompat="@drawable/img_score_background" />

    <TextView
        android:id="@+id/tv_levelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:fontFamily="monospace"
        android:text="@string/level"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_levelTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toEndOf="@+id/tv_levelTxt"
        app:layout_constraintTop_toTopOf="@+id/tv_levelTxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_total_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_score_background"
        app:layout_constraintEnd_toEndOf="@+id/image_score_background"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/image_score_background"
        app:layout_constraintTop_toTopOf="@+id/image_score_background"
        app:layout_constraintVertical_bias="0.63" />


    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_questionTitle_select_choice"
        app:layout_constraintStart_toStartOf="@+id/tv_questionTitle_select_choice"
        app:layout_constraintTop_toBottomOf="@+id/tv_questionTitle_select_choice"
        app:layout_constraintVertical_bias="0.1">

        <RadioButton
            android:id="@+id/rb_choice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/radiobutton"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rb_choice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/radiobutton"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rb_choice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/radiobutton"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rb_choice4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/radiobutton"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/exit_shape"
        android:text="@string/confirm"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg"
        app:layout_constraintVertical_bias="0.494" />

    <TextView
        android:id="@+id/tv_skip_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rg"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="@+id/rg"
        app:layout_constraintTop_toBottomOf="@+id/rg"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/tv_timerSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="#FF0000"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
        app:layout_constraintEnd_toStartOf="@+id/tv_skip_question"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_questionTitle_select_choice"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_score_background" />


</androidx.constraintlayout.widget.ConstraintLayout>