<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_home"
    tools:context=".Views.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#04000B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_170sdp"
        android:src="@drawable/img_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.177" />

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_45sdp"
        android:text="@string/start_game"
        app:backgroundTint="@null"
        android:background="@drawable/start_game_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/home_logo"
        app:layout_constraintStart_toStartOf="@+id/home_logo"
        app:layout_constraintTop_toBottomOf="@+id/home_logo"
        app:layout_constraintVertical_bias="0.20" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_45sdp"
        android:text="@string/settings"
        app:backgroundTint="@null"
        android:background="@drawable/settings_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_start_game"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_start_game"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_game"
        app:layout_constraintVertical_bias="0.10" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_45sdp"
        android:text="@string/exit"
        app:backgroundTint="@null"
        android:background="@drawable/exit_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_settings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_settings"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>