<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_level"
    tools:context=".Views.PlayerDetailsActivity">

    <ImageView
        android:id="@+id/image_score_background"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/img_score_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/tv_total_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_score_background"
        app:layout_constraintEnd_toEndOf="@+id/image_score_background"
        app:layout_constraintStart_toStartOf="@+id/image_score_background"
        app:layout_constraintTop_toTopOf="@+id/image_score_background"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:id="@+id/txt_skipTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_skipped_question"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_score_background"
        app:layout_constraintStart_toStartOf="@+id/image_score_background"
        app:layout_constraintTop_toBottomOf="@+id/image_score_background"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/tv_skipTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_skipTimes"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/txt_skipTimes"
        app:layout_constraintTop_toBottomOf="@+id/txt_skipTimes"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/txt_correct_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_correct_answers"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_skipTimes"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/txt_skipTimes"
        app:layout_constraintTop_toBottomOf="@+id/tv_skipTimes"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/tv_correctAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_correct_answer"
        app:layout_constraintStart_toStartOf="@+id/txt_correct_answer"
        app:layout_constraintTop_toBottomOf="@+id/txt_correct_answer"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/txt_wrong_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_wrong_answers"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_correct_answer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_correct_answer"
        app:layout_constraintTop_toBottomOf="@+id/tv_correctAnswers"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/tv_wrongAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_wrong_answer"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/txt_wrong_answer"
        app:layout_constraintTop_toBottomOf="@+id/txt_wrong_answer"
        app:layout_constraintVertical_bias="0.319" />


</androidx.constraintlayout.widget.ConstraintLayout>


